# nvim-claude-code

./: README.md  pyproject.toml
autoload/: claudecode.vim
autoload/claudecode/: annotations.vim  chat.vim  commands.vim  terminal.vim  utils.vim
autoload/health/: claudecode.vim
lua/claudecode/: annotations.lua  chat.lua  commands.lua  health.lua  init.lua  terminal.lua
plugin/: claudecode.lua  claudecode.vim
src/nvim_mcp_server/: nvim_client.py  server.py
